--- a/di.proyecto.clase/Vista/ControlesUsuario/UCArbolAverias.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCArbolAverias.xaml
@@ -18,7 +18,7 @@
                 <RowDefinition Height="Auto"/>
 
             </Grid.RowDefinitions>
-            <TextBlock Text="Arbol Estados de Averias" FontSize="16" Margin="10"/>
+            <TextBlock Text="Arbol Estados de Averías" FontSize="16" Margin="10"/>
             <TreeView Grid.Row="1" x:Name="treeAverias" ItemsSource="{Binding listaEstado}" SelectedItemChanged="TreeAverias_SelectedItemChanged">
                 <TreeView.Resources>
                     <HierarchicalDataTemplate DataType="{x:Type ent:estado}" ItemsSource="{Binding averia}">
@@ -67,7 +67,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="100"/>
                     </Grid.RowDefinitions>
-                    <TextBlock  Grid.Column="0" Grid.Row="0" Text="Averias" Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
+                    <TextBlock  Grid.Column="0" Grid.Row="0" Text="Averías" Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
                     <StackPanel Grid.Column="2" Margin="0,0,0,50">
                         <Button   x:Name="btnGuardar" HorizontalAlignment="Right" Style="{StaticResource MaterialDesignToolForegroundButton}" Click="BtnGuardar_Click"
                           Width="50" material:RippleAssist.IsCentered="True" Height="50">
@@ -101,12 +101,12 @@
                       Grid.Row="1" Grid.Column="0"  FontSize="16"
                   Margin="20" ItemsSource="{Binding listaEmpleado}" IsTextSearchEnabled="True" IsEditable="True" />
 
-            <ComboBox x:Name="comboTipoAveria" DisplayMemberPath="nombre" material:HintAssist.Hint="Tipo de Averia"
+            <ComboBox x:Name="comboTipoAveria" DisplayMemberPath="nombre" material:HintAssist.Hint="Tipo de Avería"
                       SelectedItem="{Binding averiaSeleccionada.tipoaveria ,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
                       Grid.Row="2" Grid.Column="0"  FontSize="16"
                   Margin="20" ItemsSource="{Binding listaTipo}" IsTextSearchEnabled="True" IsEditable="True" />
 
-            <ComboBox x:Name="comboEstado" DisplayMemberPath="nombre" material:HintAssist.Hint="Estado de la Averia"
+            <ComboBox x:Name="comboEstado" DisplayMemberPath="nombre" material:HintAssist.Hint="Estado de la Avería"
                       SelectedItem="{Binding averiaSeleccionada.estado1 ,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"
                       Grid.Row="2" Grid.Column="1"  FontSize="16"
                   Margin="20" ItemsSource="{Binding listaEstado}" IsTextSearchEnabled="True" IsEditable="True" />
@@ -117,7 +117,7 @@
 
             <DatePicker   Grid.Column="1" Grid.Row="3" x:Name="dateFechaSoluci" Foreground="{DynamicResource MaterialDesignPaper}"
                         SelectedDate="{Binding averiaSeleccionada.fechaSolucion,ValidatesOnDataErrors=True,  UpdateSourceTrigger=PropertyChanged}"                        
-                 material:HintAssist.Hint="Fecha de Solucion" Margin="20" FontSize="16"  />
+                 material:HintAssist.Hint="Fecha de Solución" Margin="20" FontSize="16"  />
 
             <StackPanel Grid.Row="4"  Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center" >
                 <TextBox  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Grid.Row="5"  Grid.Column="2" MaxLength="2"
@@ -160,7 +160,7 @@
                     AcceptsReturn="True"
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto"
-                    material:HintAssist.Hint="Solucion"
+                    material:HintAssist.Hint="Solución"
                     x:Name="txtSolucion"
                 IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextFieldTextBoxEnabledComboBox}"  />
             </StackPanel>
@@ -175,7 +175,7 @@
                     AcceptsReturn="True"
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto"
-                    material:HintAssist.Hint="Descripcion de la averia"
+                    material:HintAssist.Hint="Descripcion de la avería"
                     x:Name="txtDescrip"
                     IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextFieldTextBoxEnabledComboBox}" />
             </StackPanel>
