--- a/di.proyecto.clase/Vista/ControlesUsuario/UCAveriaNueva.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCAveriaNueva.xaml
@@ -29,7 +29,7 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="100"/>
                 </Grid.RowDefinitions>
-                <TextBlock  Grid.Column="0" Grid.Row="0" Text="Averia Nueva" Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
+                <TextBlock  Grid.Column="0" Grid.Row="0" Text="Avería Nueva" Foreground="WhiteSmoke" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0" />
                 <StackPanel Grid.Column="2" Margin="0,0,0,50">
                     <Button    HorizontalAlignment="Right" Style="{StaticResource MaterialDesignToolForegroundButton}"
                                x:Name="btnGuardarAveria" Click="BtnGuardarAveria_Click"
@@ -61,13 +61,11 @@
                    SelectedItem="{Binding averiaNueva.empleado, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                   Margin="20" ItemsSource="{Binding listaEmpleado}" IsTextSearchEnabled="True" IsEditable="True" />
 
-        
-
-        <ComboBox x:Name="comboTipoAveria" DisplayMemberPath="nombre" material:HintAssist.Hint="Tipo de Averia" Grid.Row="2" Grid.Column="0"  FontSize="20"
+        <ComboBox x:Name="comboTipoAveria" DisplayMemberPath="nombre" material:HintAssist.Hint="Tipo de Avería" Grid.Row="2" Grid.Column="0"  FontSize="20"
                    SelectedItem="{Binding averiaNueva.tipoaveria, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                   Margin="20" ItemsSource="{Binding listaTipo}" IsTextSearchEnabled="True" IsEditable="True" />
 
-        <ComboBox x:Name="comboEstado" DisplayMemberPath="nombre" material:HintAssist.Hint="Estado de la Averia" Grid.Row="2" Grid.Column="1"  FontSize="20"
+        <ComboBox x:Name="comboEstado" DisplayMemberPath="nombre" material:HintAssist.Hint="Estado de la Avería" Grid.Row="2" Grid.Column="1"  FontSize="20"
                    SelectedItem="{Binding averiaNueva.estado1, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                   Margin="20" ItemsSource="{Binding listaEstado}" IsTextSearchEnabled="True" IsEditable="True" />
 
@@ -106,7 +104,7 @@
                 AcceptsReturn="True"
                 TextWrapping="Wrap"
                 VerticalScrollBarVisibility="Auto"
-                material:HintAssist.Hint="Descripcion de la averia"
+                material:HintAssist.Hint="Descripcion de la avería"
                 IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextFieldTextBoxEnabledComboBox}"  />
         </StackPanel>
     </Grid>
