--- a/di.proyecto.clase/Vista/ControlesUsuario/UCClienteNuevo.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCClienteNuevo.xaml
@@ -81,7 +81,7 @@
         <TextBox  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Grid.Row="3" Grid.Column="1" MaxLength="20"
                    Text="{Binding clienteNuevo.telefono,ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}"
                   x:Name="txtTfn" Foreground="{DynamicResource MaterialDesignPaper}"  PreviewTextInput="NumberValidationTextBox"
-                  material:HintAssist.Hint="Telefono" Margin="20" FontSize="20"
+                  material:HintAssist.Hint="Teléfono" Margin="20" FontSize="20"
          />
         <TextBlock Text="Direccion" Style="{StaticResource MaterialDesignHeadline6TextBlock}" Foreground="{DynamicResource MaterialDesignPaper}"
                    
@@ -97,7 +97,7 @@
         <TextBox  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Grid.Row="6" Grid.Column="1" MaxLength="20"
                   Text="{Binding clienteNuevo.poblacion}"
                   x:Name="txtPoblacion" Foreground="{DynamicResource MaterialDesignPaper}"
-                  material:HintAssist.Hint="Poblacion" Margin="20" FontSize="20"
+                  material:HintAssist.Hint="Población" Margin="20" FontSize="20"
          />
 
         <TextBox  Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Grid.Row="7" Grid.Column="0" MaxLength="20"
@@ -112,7 +112,7 @@
                   material:HintAssist.Hint="Provincia" Margin="20" FontSize="20"
          />
 
-        <ComboBox x:Name="comboMatricula" Grid.Row="8" Grid.Column="0" DisplayMemberPath="matricula" material:HintAssist.Hint="Selecciona la matricula del cliente" 
+        <ComboBox x:Name="comboMatricula" Grid.Row="8" Grid.Column="0" DisplayMemberPath="matricula" material:HintAssist.Hint="Selecciona la matrícula del cliente" 
                   ItemsSource="{Binding listaVehiculos}"
                  SelectedItem="{Binding clienteNuevo.vehiculo, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
                   IsTextSearchEnabled="True" IsEditable="True"
